--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "CartAdapters/UMDv3-genesis-kicad"]
 	path = CartAdapters/UMDv3-genesis-kicad
 	url = git@github.com:db-electronics/UMDv3-genesis-kicad.git
+[submodule "CartAdapters/UMDv3-sms-kicad"]
+	path = CartAdapters/UMDv3-sms-kicad
+	url = git@github.com:db-electronics/UMDv3-sms-kicad.git
