--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "CartAdapters/UMDv3-sms-kicad"]
 	path = CartAdapters/UMDv3-sms-kicad
 	url = git@github.com:db-electronics/UMDv3-sms-kicad.git
+[submodule "CartAdapters/UMDv3-gba-kicad"]
+	path = CartAdapters/UMDv3-gba-kicad
+	url = git@github.com:db-electronics/UMDv3-gba-kicad.git
